Adding a first version of dockerized development environment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
 version: '2.1'
 services:
+  procrastinate:
+    build: .
+    volumes:
+      - "./procrastinate:/procrastinate_dev/procrastinate"
+      - "./procrastinate_demo:/procrastinate_dev/procrastinate_demo"
+    command: worker
+    environment:
+      PYTHONPATH: .
+      PROCRASTINATE_APP: procrastinate_demo.app.app
+      PGDATABASE: procrastinate
+      PGHOST: postgres
+      PGUSER: postgres
+    depends_on:
+      - postgres
 
   postgres:
     image: postgres:10
